--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -79,17 +79,27 @@
 
 
 <div class="container" style="text-align:justify;">
-  <hr><p style="text-align:center;font-variant: small-caps;">The thesis is in the process of publication.</p><hr>
+  <hr>
   <center>
   <h1 style="text-align:center;">
     Condition and Homology in Semialgebraic Geometry
   </h1>
   </center>
   <hr>
-  <div class="row" align="center"><div class="col" align="center">
-  <a class="btn btn-phd" href="thesis/genehmigteDissertation_TonelliCueto.pdf" role="button" style="width:100%;">Thesis (PDF) [final version]</a></div><div class="col" align="center">
+  <div class="row" align="center">
+  <div class="col" align="center">
+  <a class="btn btn-phdtulink" href="http://dx.doi.org/10.14279/depositonce-9453" role="button" style="width:70%;">Published Thesis at the DepositOnce Repository (DOI 10.14279/depositonce-9453)</a>
+  </div>
+  </div>
+  <hr>
+  <div class="row" align="center">
+  <div class="col" align="center">
+  <a class="btn btn-phd" href="thesis/genehmigteDissertation_TonelliCueto.pdf" role="button" style="width:100%;">Thesis (PDF) [final version]</a>
+  </div>
+  <div class="col" align="center">
   <a class="btn btn-phd" href="thesis/coverthesis_tonellicueto.jpg" role="button" style="width:100%;">Thesis cover (JPG)</a>
-  </div></div>
+  </div>
+  </div>
   <hr>
   <div class="row" align="center">
     <div class="col" align="center">
@@ -99,6 +109,14 @@
       <a href="https://www.instagram.com/p/B3fBRcdgdQw/"><img id="portrait" src="imgs/josue_tonelli_cueto_thesis.JPG" style="margin-bottom:0.5em;margin-top:1em;" alt="Josué Tonelli-Cueto holding a copy of his doctoral thesis" width="100%"/></a>
     </div>
   </div>
+  <hr>
+  <div class="row"><div class="col-md-4">
+  <p style="text-align:center;font-variant:small-caps;font-size:0.92em;"><b>Handing of the Thesis</b><br/>11/10/2019</p>
+  </div><div class="col-md-4">
+  <p style="text-align:center;font-variant:small-caps;font-size:0.92em;"><b>Doctoral Defense</b><br/>28/11/2019</p>
+  </div><div class="col-md-4">
+  <p style="text-align:center;font-variant:small-caps;font-size:0.92em;"><b>Publication of the Thesis</b><br/>30/12/2019</p>
+  </div></div>
   <hr>
   <h3>
   Abstract
@@ -137,16 +155,61 @@
   Además, en los apéndices, estudiamos el número esperado de ceros reales de un sistema oligonómico aleatorio y damos una visión informal del tema principal de esta tesis en castellano.
   </p>
   <hr>
+  <h2>Citation of the thesis</h2>
+  <p>For citing my doctoral thesis in your work, the following BibTeX entry is recomended.</p>
+    <pre>
+    @phdthesis{tonellicuetothesis,
+      author  = {Tonelli-Cueto, Josu\'{e}},
+      title   = {{Condition and Homology in Semialgebraic Geometry}},
+      school  = {Technische Universit\"at Berlin},
+      month   = dec,
+      year    = 2019,
+      address = {DepositOnce Repository},
+      note    = {http://dx.doi.org/10.14279/depositonce-9453},
+    }</pre>
+  <p style="overflow-wrap: break-word;">For citations in texts not compiled with TeX, LaTeX or other variants, it is important to add the <a href="https://www.doi.org/">Digital Object Identifier (DOI)</a> to the citation. The latter can be indicated either with &ldquo;DOI 10.14279/depositonce-9453&rdquo; or with the link &ldquo;http://dx.doi.org/10.14279/depositonce-9453&rdquo;.</p>
+  <hr>
   <h2>
-  Doctoral evaluation
+  Doctoral degree
   </h2>
   <p>
-  The doctoral thesis was handed in on the 11th of October of 2019. The evaluators of the thesis were Peter Bürgisser, Felipe Cucker and Pierre Lairez. After the evaluators approved the thesis, the doctoral defence took place on the 28th of November of 2019 at 12:00 at the room MA313/314 in the 3rd floor of the Institut für Mathematik of the Technische Universität Berlin (Str. des 17. Juni 136). The defence committee was presided by John M. Sullivan and it was formed by the evaluators Peter Bürgisser, Felipe Cucker and Pierre Lairez. After a successful defence, there was a small celebration with food and drinks in the Matheon Lounge (MA315). Currently, the final version of the thesis for publication is under preparation. After the publication of this final version, the degree of doctor will be officially issued.
-  </p>
-  <p>
-  The official name of the obtained academic degree will be <em>Doktor der Naturwissenschaften (Dr. rer. nat.)</em>, which means &ldquo;doctor in natural sciences&rdquo;. In the anglosaxon academic system, this degree is equivalent to a PhD. The final grade of the doctorate (when issued) will be &ldquo;mit Auszeichnung bestanden&rdquo; (summa cum laude), which is the maximum grade obtained only when all the evaluators give the maximum grade to both the thesis and the defence.
+  The official name of the obtained academic degree is <em>Doktor der Naturwissenschaften (Dr. rer. nat.)</em>, which means &ldquo;doctor in natural sciences&rdquo;. In the anglosaxon academic system, this degree is equivalent to a PhD. The doctorate was obtained with the grade &ldquo;mit Auszeichnung bestanden&rdquo; (summa cum laude), which is the maximum grade obtained only when all the evaluators give the maximum grade to both the thesis and the defense.
   </p>
   <hr>
+  <h2>
+  Doctoral procedure
+  </h2>
+  <p>
+  The doctoral procedure of the Technische Universität Berlin has three parts: 1) handing of the thesis, 2) doctoral defense, and 3) publication of the thesis.
+  </p>
+  <h3>
+   Handing of the thesis (11th of October of 2019)
+  </h3>
+  <p>
+  The doctoral thesis was handed in on the 11th of October of 2019. The chosen members of the doctoral committe were John M. Sullivan as president (Vorsitzender), and Peter Bürgisser, Felipe Cucker and Pierre Lairez as evluators (Gutachter). Traditionally at the Institut für Mathematik of the Technische Universität Berlin, the group of evaluators of the doctoral committe has been composed by the doctoral supervisor(s) (in my case, Peter Bürgisser and Felipe Cucker) and an external professor/researcher (in my case, Pierre Lairez). The evaluators must approve the handed version of the thesis (vorgelegte Dissertation) before the doctoral defense can take place.
+  </p>
+  <h3>
+    Doctoral defense (28th of November of 2019)
+  </h3>
+  <p>
+  The doctoral defense took place on the 28th of November of 2019 at 12:00 at room MA313/314 on the 3rd floor of the Institut für Mathematik of the Technische Universität Berlin (Str. des 17. Juni, 136). This public event consisted of a presentation of 30 minutes, followed by 90 minutes of discussion. After the defense, the doctoral committee met in private. Once they arrived at a decision, they communicated to me in private that I had successfully passed the doctoral examination. Additionally, they gave me comments and possible minor changes and corrections for preparing the final version of the thesis.
+  </p>
+  <p>
+  After a successful defense, there was a small celebration with food and drinks in the Matheon Lounge (MA315).
+  </p>
+  <h3>
+  Publication of the thesis (30th of December of 2019)
+  </h3>
+  <p>
+  To obtain the doctoral certificate, one has to prepare the final version of the thesis (genehmigte Dissertation) and publish it. The chosen option was the <a href="https://depositonce.tu-berlin.de/">DepositOnce Repository of the Technische Universität Berlin</a>, which allows one to publish the thesis by submitting a digital version (in PDF format) and depositing a printed copy in the university library. The final version of the thesis was published on the 30th of December of 2019.
+  </p>
+  <p>
+  For the final version, several changes were made. However, all these changes were minor, and no result of the thesis was affected. The biggest change occurred in the used mathematics-font of the document, which was substituted by a new one matching better the chosen text-font of the document. To keep the record, the handed version of the thesis (vorgelegte Dissertation) can be downloaded at <span><a href="thesis/vorgelegteDissertation_TonelliCueto.pdf">this link</a></span>.
+  </p>
+  <hr>
+  <p>
+  <em>Note: The claims about the doctoral procedure at the Technische Universität Berlin applies only to how the doctoral procedure was at the Institut für Mathematik of the Technische Universität Berlin when I obtained my doctoral degree. Since this procedure might have changed, the above claims might not reflect faithfully anymore this procedure, although they do reflect it faithfully at the time I obtained my doctoral degree.</em>
+  </p>
 </div>
 
 <footer>
@@ -183,6 +246,15 @@
         for (i = 0; i < x.length; i++) {
          x[i].style="font-size:1em;font-weight:bold;";
       }
+      x = document.getElementsByClassName("btn btn-phdtulink");
+      x[0].style="width:100%;";
+      x[0].innerHTML="Published Thesis<br/>at the DepositOnce Repository<br/>(DOI 10.14279/depositonce-9453)";
+      x = document.getElementsByClassName("col-md-4");
+      x[0].class="col-md-12";
+      x[1].class="col-md-12";
+      x[2].class="col-md-12";
+      x = document.getElementsByTagName("pre");
+      x[0].style="font-size:0.5em;";
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
