--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -80,21 +80,30 @@
 
 
 <div class="container" style="text-align:justify;">
-  <hr><p style="text-align:center;font-variant: small-caps;">La tesis está en el proceso de publicación.</p><hr>
+  <hr>
   <center>
   <h1 style="text-align:center;">
     Condition and Homology in Semialgebraic Geometry
   </h1>
-  <h1 style="text-align:center;">
+  <p style="text-align:center;font-size:1.5em">
     <em>(Condición y Homología en Geometría Semialgebraica)</em>
-  </h1>
+  </p>
   </center>
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
-  <a class="btn btn-phd" href="thesis/genehmigteDissertation_TonelliCueto.pdf" role="button" style="width:100%;">Tesis (PDF) [versión final]</a></div><div class="col" align="center">
+  <a class="btn btn-phdtulink" href="http://dx.doi.org/10.14279/depositonce-9453" role="button" style="width:70%;">Tesis publicada en el Repositorio DepositOnce (DOI 10.14279/depositonce-9453)</a>
+  </div>
+  </div>
+  <hr>
+  <div class="row" align="center">
+  <div class="col" align="center">
+  <a class="btn btn-phd" href="thesis/genehmigteDissertation_TonelliCueto.pdf" role="button" style="width:100%;">Tesis (PDF) [versión final]</a>
+  </div>
+  <div class="col" align="center">
   <a class="btn btn-phd" href="thesis/coverthesis_tonellicueto.jpg" role="button" style="width:100%;">Cubierta de la tesis (JPG)</a>
-  </div></div>
+  </div>
+  </div>
   <hr>
   <div class="row" align="center">
     <div class="col" align="center">
@@ -104,6 +113,14 @@
       <a href="https://www.instagram.com/p/B3fBRcdgdQw/"><img id="portrait" src="imgs/josue_tonelli_cueto_thesis.JPG" style="margin-bottom:0.5em;margin-top:1em;" alt="Josué Tonelli Cueto sosteniendo una copia de su tesis doctoral" width="100%"/></a>
     </div>
   </div>
+  <hr>
+  <div class="row"><div class="col-md-4">
+  <p style="text-align:center;font-variant:small-caps;font-size:0.92em;"><b>Entrega de la Tesis</b><br/>11/10/2019</p>
+  </div><div class="col-md-4">
+  <p style="text-align:center;font-variant:small-caps;font-size:0.92em;"><b>Defensa de la Tesis</b><br/>28/11/2019</p>
+  </div><div class="col-md-4">
+  <p style="text-align:center;font-variant:small-caps;font-size:0.92em;"><b>Publicación de la Tesis</b><br/>30/12/2019</p>
+  </div></div>
   <hr>
   <h3>
   Resumen
@@ -142,16 +159,61 @@
   Außerdem, behandeln wir im Anhange die erwartete Anzahl reeller Nullstellen eines zufälligen Systems polynomialer Gleichungen mit wenigen Termen und geben einen informellen Überblick über das Hauptthema auf Spanisch.
   </p>
   <hr>
+  <h2>Citación de la tesis</h2>
+  <p>Para citar mi tesis doctoral en tu trabajo, se recomienda la siguiente entrada de BibTeX.</p>
+    <pre>
+    @phdthesis{tonellicuetothesis,
+      author  = {Tonelli-Cueto, Josu\'{e}},
+      title   = {{Condition and Homology in Semialgebraic Geometry}},
+      school  = {Technische Universit\"at Berlin},
+      month   = dec,
+      year    = 2019,
+      address = {DepositOnce Repository},
+      note    = {http://dx.doi.org/10.14279/depositonce-9453},
+    }</pre>
+  <p style="overflow-wrap: break-word;">Para citar en textos no compilados con TeX, LaTeX u otras variantes, es importante indicar el <a href="https://www.doi.org/">Identificador de Objeto Digital (DOI)</a> en la cita. Este puede indicarse añadiendo &ldquo;DOI 10.14279/depositonce-9453&rdquo; o el enlace &ldquo;http://dx.doi.org/10.14279/depositonce-9453 &ldquo;.</p>
+  <hr>
   <h2>
-  Proceso doctoral
+  Grado de doctor
   </h2>
   <p>
-  La tesis doctoral fue entregada el 11 de octubre de 2019. Los evluadores de la tesis fueron Peter Bürgisser, Felipe Cucker y Pierre Lairez. Tras la aprovación de la tesis, la defensa doctoral tuvo lugar el 28 de noviembre de 2019 a las 12:00 en el aula MA313/314 en la 3ª planta del Institut für Mathematik de la Technische Universität Berlin (Str. des 17. Juni 136). El comité de la defensa doctoral fue presidido por John M. Sullivan y estuvo compuesto por los evaluadores Peter Bürgisser, Felipe Cucker and Pierre Lairez. Después de una defensa exitosa, hubo una pequeña celebración con comida y bebidas en el Matheon Lounge (MA315). Actualmente, la versión final de la tesis para publicación se encuentra en preparación. Tras la publicación de esta versión final, el grado de doctor se otorgorá oficialmente.
-  </p>
-  <p>
-  El nombre oficial del grado académico conseguido es <em>Doktor der Naturwissenschaften (Dr. rer. nat.)</em>, que significa &ldquo;doctor en ciencias naturales&rdquo;. En el sistema académico anglosajón, este grado académico es equivalente al de un PhD. La nota final del doctorado (cuando sea entregado) será &ldquo;mit Auszeichnung bestanden&rdquo; (summa cum laude), que es la nota máxima que se obtine solamente cuando todes les evaluadores dan la nota máxima tanto a la tesis como a la defensa.
+  El nombre oficial del grado académico conseguido es <em>Doktor der Naturwissenschaften (Dr. rer. nat.)</em>, que significa &ldquo;doctor en ciencias naturales&rdquo;. En el sistema académico anglosajón, este grado académico es equivalente al de un PhD. La nota final del doctorado es &ldquo;mit Auszeichnung bestanden&rdquo; (summa cum laude), que es la nota máxima que se obtiene solamente cuando todes les evaluadores dan la nota máxima tanto a la tesis como a la defensa.
   </p>
   <hr>
+  <h2>
+  Proceso de obtención del doctorado
+  </h2>
+  <p>
+  El proceso de obtención del doctorado en la Technische Universität Berlin consta de tres partes: 1) entrega de la tesis, 2) defensa de la tesis, y 3) publicación de la tesis.
+  </p>
+  <h3>
+   Entrega de la tesis (11 de octubre del 2019)
+  </h3>
+  <p>
+  La tesis doctoral fue entregada el 11 de octubre del 2019. Los miembros elegidos para el tribunal de tesis fueron John M. Sullivan como presidente (Vorsitzender), y Peter Bürgisser, Felipe Cucker y Pierre Lairez como evaluadores (Gutachter). En el Institut für Mathematik de la Technische Universität Berlin, el grupo de evaluadores del tribunal de tesis ha estado compuesto tradicionalmente por le(s) director(es) de tesis (en mi caso, Peter Bürgisser y Felipe Cucker) y por une profesor/investigador externe (en mi caso, Pierre Lairez). Les evaluadores deben aprobar la versión entregada de la tesis (vorgelegte Dissertation) antes de que la defensa pueda suceder.
+  </p>
+  <h3>
+    Defensa de la tesis (28 de noviembre del 2019)
+  </h3>
+  <p>
+  La defensa doctoral tuvo lugar el 28 de noviembre del 2019 a las 12:00 en el aula MA313/314 en la 3ª planta del Institut für Mathematik de la Technische Universität Berlin (Str. des 17. Juni 136). Este evento público consistió de una presentación de 30 minutos seguida por una discusión de 90 minutos. Tras la defensa, el tribunal de tesis se reunió en privado. Tras tomar una descisión, se me comunicó en privado que había superado el proceso de evaluación del doctorado. Adicionalmente, me dieron comentarios, y cambios y correcciones menores posibles para la versión final de la tesis.
+  </p>
+  <p>
+  Después de una defensa exitosa, hubo una pequeña celebración con comida y bebidas en el Matheon Lounge (MA315).
+  </p>
+  <h3>
+    Publicación de la tesis (30 de diciembre del 2019)
+  </h3>
+  <p>
+  Para obtener el certificado de doctor, se debe preparar la versión final de la tesis (genehmigte Dissertation) y publicarla. La opción elegida para ello ha sido el <a href="https://depositonce.tu-berlin.de/">Repositorio DepositOnce de la Technische Universität Berlin</a>, que permite publicar la tesis entregando una versión digital, en formato PDF format, y depositando una copia impresa en la biblioteca universitaria. La versión final de la tesis fue publicada el 30 de diciembre del 2019.
+  </p>
+  <p>
+  Para la versión final, se realizaron varios cambios. Sin embargo, todos ellos fueron cambios menores y ningún resultado de la tesis se vio afectado. El mayor cambio ocurrió en la fuente para matemáticas usada en el documento, la cual fue substituida por una nueva que encajaba mejor con la fuente elegida para el texto en el documento. Para mantener el registro, la versión entregada (o leída) de la tesis aun se puede descargar en <span><a href="thesis/vorgelegteDissertation_TonelliCueto.pdf">este enlace</a></span>.
+  </p>
+  <hr>
+  <p>
+  <em>Nota: Las afirmaciones acerca del proceso de obtención del doctorado en la Technische Universität Berlin son válidas únicamente para el proceso de obtención del doctorado en el Institut für Mathematik de la Technische Universität Berlin en la época en la que obtuve mi doctorado. Dado que este proceso ha podido cambiar desde entonces, las afirmaciones hechas pueden no reflejar fielmente este proceso a día de hoy, aunque lo reflejan fielmente en el momento en el obtuve mi título de doctor.</em>
+  </p>
 </div>
 
 <footer>
@@ -188,6 +250,15 @@
         for (i = 0; i < x.length; i++) {
          x[i].style="font-size:1em;font-weight:bold;";
       }
+      x = document.getElementsByClassName("btn btn-phdtulink");
+      x[0].style="width:100%;";
+      x[0].innerHTML="Tesis publicada<br/>en el Repositorio DepositOnce<br/>(DOI 10.14279/depositonce-9453)";
+      x = document.getElementsByClassName("col-md-4");
+      x[0].class="col-md-12";
+      x[1].class="col-md-12";
+      x[2].class="col-md-12";
+      x = document.getElementsByTagName("pre");
+      x[0].style="font-size:0.5em;";
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
