--- a/contact.html
+++ b/contact.html
@@ -93,9 +93,8 @@ GERMANY
 Room MA320 (3rd floor)
 </p>
 
-<p align="left">
-<em>firstname.1stsurname.surnametwo@bizkaia.eu</em>
-</p>
+<!--Place the code below where you want the link to be displayed-->
+<p align="left" id="obf"></p>
 
 <p align="left">
 +49 (0)30 314 - 29385 (phone)<br>
@@ -145,6 +144,7 @@ Room MA320 (3rd floor)
     <!-- For phone -->
     <script type="text/javascript">
     <!--
+    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});document.body.appendChild(eo);
     if (screen.width <= 699) {
     var x;
     x = document.getElementsByClassName("col-md-4");
