CV with phdthesis

--- a/cv_es.html
+++ b/cv_es.html
@@ -404,6 +404,15 @@
        <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker y J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas (Inglés) [Computando la Homología de Conjuntos Semialgebraicos. I: Fórmulas Laxas], <i>Foundations of Computational Mathematics</i>, May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
       </div>
 
+      <br><div class="row"><div class="col-md-12">
+      <h3>Otras</h3>
+      </div></div>
+
+      <br><div class="cv">
+      <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Condition  and  Homology  in  Semialgebraic  Geometry<a class="btn btn-phd" href="doctoralthesis_es.html" role="button">tesis doctoral</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. <i>Condition  and  Homology  in  Semialgebraic  Geometry (Inglés) [Condición y Homología en Geometría Semialgebraica]</i>. Tesis doctoral, Technsiche Universit&auml;t Berlin, Repositorio DepositOnce, diciembre 2019. <span><a href="http://dx.doi.org/10.14279/depositonce-9453">DOI 10.14279/depositonce-9453</a></span></div>
+      </div>
+
    </div>
 <hr>
    <div id="talks">
@@ -1908,6 +1917,10 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
        x[i].style="font-size:1em;font-weight:bold;";
       }
     x = document.getElementsByClassName("btn btn-arxiv");
+    for (i = 0; i < x.length; i++) {
+     x[i].style="width:10em;";
+    }
+    x = document.getElementsByClassName("btn btn-phd");
     for (i = 0; i < x.length; i++) {
      x[i].style="width:10em;";
     }
