--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@ Room MA320 (3rd floor)
 </p>
 
      <p align="left">
-     <span><a id="link" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/josue_tonelli_cueto/">Institutional webpage</a></span>
+     <span><a id="link" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">Institutional webpage</a></span>
      </p>
   </div>
 
@@ -144,7 +144,7 @@ Room MA320 (3rd floor)
     <!-- For phone -->
     <script type="text/javascript">
     <!--
-    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});document.body.appendChild(eo);
+    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
     if (screen.width <= 699) {
     var x;
     x = document.getElementsByClassName("col-md-4");
