--- a/contact_es.html
+++ b/contact_es.html
@@ -101,7 +101,7 @@ Habitaci&oacute;n MA320 (3&ordf; planta)
 </p>
 
      <p align="left">
-     <span><a id="link" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/josue_tonelli_cueto/">P&aacute;gina institutional</a></span>
+     <span><a id="link" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">P&aacute;gina institutional</a></span>
      </p>
   </div>
 
@@ -143,7 +143,7 @@ Habitaci&oacute;n MA320 (3&ordf; planta)
     <!-- For phone -->
     <script type="text/javascript">
     <!--
-    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});document.body.appendChild(eo);
+    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
     if (screen.width <= 699) {
     var x;
     x = document.getElementsByClassName("col-md-4");
