--- a/index_es.html
+++ b/index_es.html
@@ -96,8 +96,8 @@
         <center>
         <h1>Josu&eacute; Tonelli Cueto</h1>
         <h2>Matemático</h2>
-        <h3><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/josue_tonelli_cueto/">Doctorando en la Technische Universit&auml;t Berlin</a></h3>
-        <h3><a href="https://www.math-berlin.de/students/phase-ii-students">Phase II Student en la Berlin Mathematical School</a></h3>
+        <h3><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">Doctor por la Technische Universit&auml;t Berlin</a></h3>
+        <!--<h3><a href=""></a></h3>-->
         </center>
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
           <div class="col">
@@ -157,8 +157,7 @@
       for (i = 0; i < x.length; i++) {
        x[i].style="font-size:1em;font-weight:bold;";
     }
-    x[0].innerHTML='<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/josue_tonelli_cueto/">PhD Student at TU Berlin</a>';
-    x[1].innerHTML='<a href="https://www.math-berlin.de/students/phase-ii-students">Phase II Student at BMS</a>';
+    x[0].innerHTML='<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">PhD por la TU Berlin</a>';
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 0.4em;";
     x = document.getElementsByClassName("col-md-5");
