--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 <p align="center" style="font-size:x-small;">In front of old postboxes in the <a href="https://hk.history.museum/" style="font-size:1em">Hong Kong Museum of History</a></p>
   </div>
   <div class="col-md-4" style="padding-top:1em;">
-     <h3>Josu&eacute; Tonelli-Cueto</h3>
+     <h3>Dr. Josu&eacute; Tonelli-Cueto</h3>
 <p></p>
      <p align="left">
 <b>Technische Universität Berlin</b><br>
